syntax = "proto3";

package proto;


import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "annotations.proto";

option go_package = "github.com/intel-innersource/frameworks.cloud.devcloud.services.idc/go/pkg/pb";

option (idc.file).deploy = global;

service UserCredentialsService {
  rpc GetUserCredentials(GetUserCredentialRequest) returns (GetUserCredentialResponse) {
    option (google.api.http) = {
      get: "/v1/user/credentials/{cloudaccountId}/list"
    };
    option (idc.method).authz.cloudAccount = true;
  };

  rpc CreateUserCredentials(CreateUserCredentialsRequest) returns (ClientCredentials) {
    option (google.api.http) = {
      post: "/v1/user/credentials/{cloudaccountId}/create"
      body: "*"
    };
    option (idc.method).authz.cloudAccount = true;
  };
  
  rpc RemoveUserCredentials(DeleteUserCredentialsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/user/credentials/{cloudaccountId}/delete"
    };
    option (idc.method).authz.cloudAccount = true;
  };

  rpc RevokeUserCredentials(RevokeUserCredentialsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/user/credentials/{cloudaccountId}/revoke"
    };
  };

  rpc RemoveMemberUserCredentials(RemoveMemberUserCredentialsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/user/credentials/{cloudaccountId}/member/revoke"
    };
    option (idc.method).authz.cloudAccount = true;
  };
      
  // Ping always returns a successful response by the service implementation.
  // It can be used for testing connectivity to the service.
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {};
}

message GetUserCredentialRequest {
  string cloudaccountId = 1[
    (idc.field).cloudAccount = true
  ];
}

message GetUserCredentialResponse {
  repeated GetUserCredential appClients = 1;
}

message GetUserCredential{
  string clientId = 1;
  string appClientName = 2;
  string revoked = 3;
  google.protobuf.Timestamp created = 4;
}

message ClientCredentials {
   string cloudaccountId = 1;
   string clientId = 2;
   string clientSecret = 3;
}

message CreateUserCredentialsRequest {
  string cloudaccountId = 1[
    (idc.field).cloudAccount = true
  ];
  string appClientName = 2;
}

message UpdateUserCredentialsRequest {
  string cloudaccountId = 1;
  string userEmail = 2;
  string clientId = 3;
  string countryCode = 4;
  string revoked = 5;
  string enabled = 6;
  string appClientName = 7;
  google.protobuf.Timestamp created = 8;
}

message DeleteUserCredentialsRequest {
  string cloudaccountId = 1[
    (idc.field).cloudAccount = true
  ];
  string clientId = 2[
    (idc.field).cognitoClientId = true
  ];
}

message RevokeUserCredentialsRequest {
  string cloudaccountId = 1;
  string revoked = 2;
}

message RemoveMemberUserCredentialsRequest {
  string cloudaccountId = 1;
  string revoked = 2;
  string memberEmail = 3;
}